scrolling fixed on mobile?

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .sequences{
   height: 295px;
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .synthSequenceMenu {
